--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,11 +1,10 @@
-<main class="page mt-4 pt-4">
+<main class="page">
   <section class="clean-block about-us">
     <div class="container">
       <div class="block-heading">
         <h2 class="text-info">Sobre nosotros</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
+          Te invitamos a conocer un poco sobre nosotros
         </p>
       </div>
 
@@ -17,13 +16,27 @@
               src="assets/img/logos/logo.png"
             />
             <div class="card-body info">
-              <h4 class="card-title">Agrofrosr</h4>
+              <h4 class="card-title">Agrofrost</h4>
               <p class="card-text">
-                Persona apasionada por la tecnología, se ha desempeñado como
-                instructor de programación, posee conocimientos de desarrollo
-                web. Sera el CEO (que en español significa 'Oficial Ejecutivo en
-                jefe'. El cual tiene la mayor autoridad en la jerarquía
-                operacional de una organización.
+                Agrofrost S.A.S es la iniciativa que pretende proporcionar un
+                canal directo para incentivar la participación en el sector
+                agro, disminuyendo los eslabones en la cadena de producción y
+                comercialización. No va solo dirigido a la cosecha sino en el
+                tratamiento de la materia prima para el control de recursos y la
+                concepción de un modelo de negocio donde los intermediarios no
+                sean los únicos que puedan exponer sus puntos de vista, si no
+                que sea una red de contactos donde se puedan dar a conocer y
+                generar alianzas. 
+                </p>
+                <p>
+                
+                Esta iniciativa se plantea como una
+                alternativa para fortalecer la agricultura, en el contexto de la
+                reactivación económica tras la emergencia de salud pública a
+                causa del COVID-19, teniendo como objetivo el bienestar de la
+                sociedad colombiana, especialmente a aquellos que no cuenta con
+                el apoyo del gobierno ni con los medios suficientes para
+                publicitar y comercializar sus productos y servicios.
               </p>
               <div class="icons">
                 <a href="#"><i class="icon-social-facebook"></i></a
@@ -39,7 +52,7 @@
           <div class="card text-center clean-card">
             <img
               class="card-img-top w-100 d-block"
-              src="assets/img/avatars/avatar1.jpg"
+              src="assets/img/avatars/fotoAlejandro.png"
             />
             <div class="card-body info">
               <h4 class="card-title">Diego Hernande</h4>
@@ -62,7 +75,7 @@
           <div class="card text-center clean-card">
             <img
               class="card-img-top w-100 d-block"
-              src="assets/img/avatars/avatar2.jpg"
+              src="assets/img/avatars/fotoOscar3.png"
             />
             <div class="card-body info">
               <h4 class="card-title">Oscar Bautista</h4>
