--- a/src/app/pages/feautures/feautures.component.html
+++ b/src/app/pages/feautures/feautures.component.html
@@ -2,43 +2,38 @@
   <section class="clean-block features">
     <div class="container">
       <div class="block-heading">
-        <h2 class="text-info">Features</h2>
+        <h2 class="text-info">Caracteristicas</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
+          Agrofrost te ofrece 
         </p>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-5 feature-box">
           <i class="icon-star icon"></i>
-          <h4>Bootstrap 4</h4>
+          <h4>Publiación Gratuita</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-            urna, dignissim nec auctor in, mattis vitae leo.
+            Podrás publicar de forma gratuita, los productos agrícolas que estes vendiendo, comprando o donde necesites algún tipo de contrato
           </p>
         </div>
         <div class="col-md-5 feature-box">
           <i class="icon-pencil icon"></i>
-          <h4>Customizable</h4>
+          <h4>Sin intermediarios</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-            urna, dignissim nec auctor in, mattis vitae leo.
+            Ponte en contacto de forma directa con el usuario de la publicación  
           </p>
         </div>
         <div class="col-md-5 feature-box">
           <i class="icon-screen-smartphone icon"></i>
-          <h4>Responsive</h4>
+          <h4>Al instante</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-            urna, dignissim nec auctor in, mattis vitae leo.
+            Utilizamos tecnología de alta disponibilidad, por ello, tu publicación se vera al instante
           </p>
         </div>
         <div class="col-md-5 feature-box">
           <i class="icon-refresh icon"></i>
-          <h4>All Browser Compatibility</h4>
+          <h4>Planes para aumentar tu visibilidad </h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-            urna, dignissim nec auctor in, mattis vitae leo.
+            Nuestros planes pueden mejorar la visibilidad de tu publicación
           </p>
         </div>
       </div>
