--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,4 +1,4 @@
-<main class="page catalog-page mt-4 pt-4">
+<main class="page catalog-page">
   <section class="clean-block clean-catalog dark">
     <div class="container">
       <div class="block-heading">
@@ -279,242 +279,7 @@
   </section>
 </main>
 
-//////////////////////////////////////////////////////////////////
 
-<main class="page service-page">
-  <section class="clean-block clean-services dark">
-    <div class="container">
-      <div class="block-heading">
-        <h2 class="text-info">Service Page</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
-        </p>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img
-              class="card-img-top w-100 d-block"
-              src="assets/img/scenery/image5.jpg"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Lorem Ipsum</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in.
-              </p>
-            </div>
-            <div>
-              <button class="btn btn-outline-primary btn-sm" type="button">
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img
-              class="card-img-top w-100 d-block"
-              src="assets/img/scenery/image6.jpg"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Lorem Ipsum</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in.
-              </p>
-            </div>
-            <div>
-              <button class="btn btn-outline-primary btn-sm" type="button">
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img
-              class="card-img-top w-100 d-block"
-              src="assets/img/scenery/image1.jpg"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Lorem Ipsum</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in.
-              </p>
-            </div>
-            <div>
-              <button class="btn btn-outline-primary btn-sm" type="button">
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img
-              class="card-img-top w-100 d-block"
-              src="assets/img/scenery/image1.jpg"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Lorem Ipsum</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in.
-              </p>
-            </div>
-            <div>
-              <button class="btn btn-outline-primary btn-sm" type="button">
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img
-              class="card-img-top w-100 d-block"
-              src="assets/img/scenery/image5.jpg"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Lorem Ipsum</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in.
-              </p>
-            </div>
-            <div>
-              <button class="btn btn-outline-primary btn-sm" type="button">
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img
-              class="card-img-top w-100 d-block"
-              src="assets/img/scenery/image6.jpg"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Lorem Ipsum</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in.
-              </p>
-            </div>
-            <div>
-              <button class="btn btn-outline-primary btn-sm" type="button">
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</main>
 
-&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 
-<main class="page testimonials">
-  <section class="clean-block clean-testimonials dark">
-    <div class="container">
-      <div class="block-heading">
-        <h2 class="text-info">Testimonials</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
-        </p>
-      </div>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card clean-testimonial-item border-0 rounded-0">
-            <div class="card-body">
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                augue nunc, pretium at augue at, convallis pellentesque ipsum.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </p>
-              <h3>John Smith</h3>
-              <h4 class="card-title">Founder of Something</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card clean-testimonial-item border-0 rounded-0">
-            <div class="card-body">
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                augue nunc, pretium at augue at, convallis pellentesque ipsum.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </p>
-              <h3>John Smith</h3>
-              <h4 class="card-title">Founder of Something</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card clean-testimonial-item border-0 rounded-0">
-            <div class="card-body">
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                augue nunc, pretium at augue at, convallis pellentesque ipsum.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </p>
-              <h3>John Smith</h3>
-              <h4 class="card-title">Founder of Something</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</main>
 
-************************************
-<main class="page contact-us-page">
-  <section class="clean-block clean-form dark">
-    <div class="container">
-      <div class="block-heading">
-        <h2 class="text-info">Contact Us</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
-        </p>
-      </div>
-      <form>
-        <div class="mb-3">
-          <label class="form-label" for="name">Name</label
-          ><input class="form-control" type="text" id="name" name="name" />
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="subject">Subject</label
-          ><input
-            class="form-control"
-            type="text"
-            id="subject"
-            name="subject"
-          />
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="email">Email</label
-          ><input class="form-control" type="email" id="email" name="email" />
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="message">Message</label
-          ><textarea
-            class="form-control"
-            id="message"
-            name="message"
-          ></textarea>
-        </div>
-        <div class="mb-3">
-          <button class="btn btn-primary" type="submit">Send</button>
-        </div>
-      </form>
-    </div>
-  </section>
-</main>
