--- a/src/app/pages/singup/singup.component.html
+++ b/src/app/pages/singup/singup.component.html
@@ -1,4 +1,4 @@
-<main class="page registration-page mt-4 pt-4">
+<main class="page registration-page">
   <section class="clean-block clean-form dark">
     <div class="container">
       <div class="block-heading">
