--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,33 +4,33 @@
       <div class="col-sm-3">
         <h5>Mas visitado</h5>
         <ul>
-          <li><a href="#">inicio</a></li>
-          <li><a href="#">Registrate</a></li>
-          <li><a href="#">Ingresa</a></li>
-          <li><a href="#">Vende</a></li>
-          <li><a href="#">Compra</a></li>
+          <li><a [routerLink]="['/home']" >inicio</a></li>
+          <li><a [routerLink]="['/singup']" >Registrate</a></li>
+          <li><a [routerLink]="['/singin']" >Ingresa</a></li>
+          <!-- <li><a [routerLink]="['/home']" >Vende</a></li> -->
+          <!-- <li><a [routerLink]="['/home']" >Compra</a></li> -->
         </ul>
       </div>
       <div class="col-sm-3">
         <h5>Sobre Nosotros</h5>
         <ul>
-          <li><a href="#">Información de la empresa</a></li>
-          <li><a href="#">Contáctanos</a></li>
+          <li><a [routerLink]="['/about']" >Información de la empresa</a></li>
+          <li><a [routerLink]="['/contactus']" >Contáctanos</a></li>
         </ul>
       </div>
       <div class="col-sm-3">
         <h5>Soprte al cliente</h5>
         <ul>
-          <li><a href="#">Preguntas y respuestas frecuentes (FAQ)</a></li>
-          <li><a href="#">Mesa de ayuda</a></li>
+          <!-- <li><a [routerLink]="['/home']" >Preguntas y respuestas frecuentes (FAQ)</a></li> -->
+          <li><a [routerLink]="['/contactus']" >Mesa de ayuda</a></li>
         </ul>
       </div>
       <div class="col-sm-3">
         <h5>Términos y condiciones</h5>
         <ul>
-          <li><a href="#">Términos de sericio</a></li>
-          <li><a href="#">Términos y condiciones de uso </a></li>
-          <li><a href="#">Politíca de privadicidad</a></li>
+          <!-- <li><a [routerLink]="['/home']" >Términos de sericio</a></li> -->
+          <li><a [routerLink]="['/home']" >Términos y condiciones de uso </a></li>
+          <!-- <li><a [routerLink]="['/home']" >Politíca de privadicidad</a></li> -->
         </ul>
       </div>
     </div>
