--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -1,4 +1,4 @@
-<main class="page pricing-table-page mt-4 pt-4">
+<main class="page pricing-table-page">
   <section class="clean-block clean-pricing dark">
     <div class="container">
       <div class="block-heading">
