--- a/src/app/private-pages/create-publication/create-publication.component.html
+++ b/src/app/private-pages/create-publication/create-publication.component.html
@@ -1,4 +1,4 @@
-<main class="page login-page mt-4 pt-4">
+<main class="page login-page">
   <section class="clean-block clean-form dark">
     <div class="container">
       <div class="block-heading">
